# llm-globber

./: .gitignore  Cargo.toml  Makefile  README.md  folder_to_text.c  llm_globber.c  test_basic.sh  test_dotfiles.sh  test_file_types.sh  test_llm_globber.sh  test_name_pattern.sh  test_recursive.sh
src/: main.rs
src/tests/: mod.rs
tests/: test_basic.sh  test_c_version.sh  test_common.sh  test_dotfiles.sh  test_file_types.sh  test_git_option.sh  test_llm_globber.sh  test_name_pattern.sh  test_profile.sh  test_recursive.sh  test_signature.sh  test_skip_pattern.sh  test_threading.sh  test_unglob.sh  test_verbose_quiet.sh
tests/test_files_backup/: unglob_test2.txt  unglob_test3.txt
tests/test_files_backup_sig/: sig_test1.txt  sig_test2.txt  sig_test3.txt  sig_test4.txt
