[package]
name = "llm_globber" 
version = "0.3.0" 
authors = ["Ken Simpson <ksimpson@mailchannels.com>"]
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
glob = "0.3"
log = "0.4"
memmap2 = "0.5"
simplelog = "0.12"
chrono = "0.4"
ed25519-dalek = "1.0"
base64 = "0.21"
rand = "0.7"  # Match the version expected by ed25519-dalek 1.0
rand_core = "0.5"  # Match the version expected by ed25519-dalek 1.0

[dev-dependencies]
tempfile = "3.3"
